--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -31,7 +31,7 @@ jobs:
               run: make
             - name: "Package"
               run: |
-                tar -a -c -f extractor-windows.zip jpextractor.exe extractor.exe hiragana.txt katakana.txt kanji.txt
+                tar -a -c -f extractor-win.zip jpextractor.exe extractor.exe hiragana.txt katakana.txt kanji.txt
             - name: "Upload"
               uses: actions/upload-artifact@v1
               with:
